--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LP-test</title>
-    <link rel="stylesheet" href="../lp-test/css/reset.css">
-    <link rel="stylesheet" href="../lp-test/css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Noto+Serif+JP:wght@900&display=swap"
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="../lp-test/img/estra_logo.png" alt="">
+        <img src="/img/estra_logo.png" alt="">
         <nav>
             <ul class="header__link">
                 <li><a href="#">News</a></li>
