--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LP-test</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Noto+Serif+JP:wght@900&display=swap"
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="/img/estra_logo.png" alt="">
+        <img src="./img/estra_logo.png" alt="">
         <nav>
             <ul class="header__link">
                 <li><a href="#">News</a></li>
@@ -40,7 +40,7 @@
                 <p>Educational Technology Company<br>
                 estra inc since 2019</p>
             </div>
-                <img src="img/firstview.jpg" alt="">
+                <img src="./img/firstview.jpg" alt="">
             </div>
         </div>
         <div class="news">
@@ -121,7 +121,7 @@
                         独自のオペレーションとコーチングを融合した新しい教育の仕組みにより、一人ひとりに合わせた最適な教育を提供します。
                     </p>
                 </div>
-                <img src="img/about.jpg" alt="">
+                <img src="./img/about.jpg" alt="">
             </div>
 
         </div>
@@ -132,7 +132,7 @@
                 </h3>
                 <div class="service__contents">
                     <a href="" class="service__content__left">
-                        <img src="img/service__first.svg" alt="">
+                        <img src="./img/service__first.svg" alt="">
                         <div class="service__content__text">
                             <h5>
                                 教育事業
@@ -144,7 +144,7 @@
                     </a>
                     <div class="service__content__right">
                         <a href="" class="service__content__top-right">
-                            <img src="img/service__first.svg" alt="">
+                            <img src="./img/service__first.svg" alt="">
                             <div class="service__content__text">
                                 <h5>
                                     教育事業
@@ -156,7 +156,7 @@
 
                         </a>
                         <a href="" class="service__content__bottom-right">
-                            <img src="img/service__first.svg" alt="">
+                            <img src="./img/service__first.svg" alt="">
                             <div class="service__content__text">
                                 <h5>
                                     教育事業
@@ -177,7 +177,7 @@
                 </h3>
                 <div class="blog__article">
                     <a href="" class="blog__box">
-                        <img src="img/blog__first.jpg" alt="">
+                        <img src="./img/blog__first.jpg" alt="">
                         <p class="blog__category">
                             Blog
                         </p>
@@ -198,7 +198,7 @@
                         </div>
                     </a>
                     <a href="" class="blog__box">
-                        <img src="img/blog__first.jpg" alt="">
+                        <img src="./img/blog__first.jpg" alt="">
                         <p class="blog__category">
                             Blog
                         </p>
@@ -219,7 +219,7 @@
                         </div>
                     </a>
                     <a href="" class="blog__box">
-                        <img src="img/blog__first.jpg" alt="">
+                        <img src="./img/blog__first.jpg" alt="">
                         <p class="blog__category">
                             Blog
                         </p>
@@ -280,13 +280,13 @@
         </div>
         <div class="link">
             <a href="" class="link__recruit">
-                <img src="img/recruit.png" alt="">
+                <img src="./img/recruit.png" alt="">
                 <h4>
                     採用情報
                 </h4>
             </a>
             <a href="#" class="link__interview">
-                <img src="img/interview.png" alt="">
+                <img src="./img/interview.png" alt="">
                 <h4>
                     社員インタビュー
                 </h4>
